[package]
name = "futures-macros-lite"
version = "0.1.0"
edition = "2021"
description = "futures about macros in lite"
license = "MIT"
repository = "https://github.com/tiannian/futures-utils-lite"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ['full', 'extra-traits', "parsing"] }
proc-macro2 = "1.0"

