[package]
name = "futures-utils-lite"
version = "0.1.0"
edition = "2021"
description = "futures about utils in lite"
license = "MIT"
repository = "https://github.com/tiannian/futures-utils-lite"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-lite = "1.12.0"

futures-macros-lite = { path = "../futures-macros-lite", version = "0.1.0" }

pin-project-lite = "0.2.8"

[features]
default = ["alloc"]
std = ["alloc"]
alloc = []

